--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -45,7 +45,7 @@
         "id": "e3LGUP3rloe0"
       },
       "source": [
-        "!Mindustry'https://github.com/Anuken/Mindustry'"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -67,7 +67,7 @@
         "id": "W-UUMykkmZvf"
       },
       "source": [
-        "%cd MindustMin"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -100,7 +100,7 @@
         "id": "VWurxo-jqvUc"
       },
       "source": [
-        "!wwget"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -133,8 +133,8 @@
         "id": "e_88kENGtSrD"
       },
       "source": [
-        "import os\n",
-        "s"
+        "import os\n"
+        "os.environment ('ANDROID_HOME')='/content/comandline-tools'"
       ],
       "execution_count": null,
       "outputs": []
@@ -145,8 +145,7 @@
         "id": "2pn5c-H-rklF"
       },
       "source": [
-        "import os\n",
-        "os.environment('ANDROID_HOME')='/contentkimp/'\n"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -157,7 +156,7 @@
         "id": "x77rOABAnCwu"
       },
       "source": [
-        "!apt iinstall"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -168,7 +167,7 @@
         "id": "KRf5ZZbQnKgh"
       },
       "source": [
-        "!apt get!"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -179,8 +178,7 @@
         "id": "6HS587f6nRJr"
       },
       "source": [
-        "!apt install java open-jdk\n",
-        "pen-jdk\n"
+        ""
       ],
       "execution_count": null,
       "outputs": []
@@ -202,7 +200,7 @@
         "id": "MNBD52FXofne"
       },
       "source": [
-        "!apt search openjdk"
+        ""
       ],
       "execution_count": null,
       "outputs": []
