--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -133,7 +133,7 @@
         "id": "e_88kENGtSrD"
       },
       "source": [
-        "import os\n"
+        "import os\n",
         "os.environment ('ANDROID_HOME')='/content/comandline-tools'"
       ],
       "execution_count": null,
