--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -134,7 +134,7 @@
       },
       "source": [
         "import os\n",
-        "os.environment ('ANDROID_HOME')='/content/comandline-tools'"
+        "os.environment['ANDROID_HOME']='/content/comandline-tools'"
       ],
       "execution_count": null,
       "outputs": []
@@ -145,7 +145,7 @@
         "id": "2pn5c-H-rklF"
       },
       "source": [
-        ""
+        "./gradlew android:assembleDebug"
       ],
       "execution_count": null,
       "outputs": []
