--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -134,7 +134,7 @@
       },
       "source": [
         "import os\n",
-        "os.environment['ANDROID_HOME']='/content/comandline-tools'"
+        "os.environ['ANDROID_HOME']='/content/comandline-tools'"
       ],
       "execution_count": null,
       "outputs": []
