--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -145,7 +145,7 @@
         "id": "2pn5c-H-rklF"
       },
       "source": [
-        "./gradlew android:assembleDebug"
+        "!./gradlew android:assembleDebug"
       ],
       "execution_count": null,
       "outputs": []
