--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -135,7 +135,8 @@
       "source": [
         "import os\n",
         "os.environ['ANDROID_HOME']='/content/comandline-tools'\n",
-        "os.environ['ANDROID_SDK_ROOT']='/content/comandline-tools'"
+        "os.environ['ANDROID_SDK_ROOT']='/content/comandline-tools'\n",
+        !./gradlew android:assembleDebug
       ],
       "execution_count": null,
       "outputs": []
