--- a/Untitled0.ipynb
+++ b/Untitled0.ipynb
@@ -136,7 +136,7 @@
         "import os\n",
         "os.environ['ANDROID_HOME']='/content/comandline-tools'\n",
         "os.environ['ANDROID_SDK_ROOT']='/content/comandline-tools'\n",
-        !./gradlew android:assembleDebug
+        "!./gradlew android:assembleDebug"
       ],
       "execution_count": null,
       "outputs": []
